<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="kinetic_volume_icon">Volume</string>
    <string name="kinetic_play_pause_icon">Play or pause</string>
    <string name="kinetic_settings_icon">Settings</string>
    <string name="kinetic_fullscreen_icon">Fullscreen</string>
    <string name="kinetic_rate_icon">Playback rate</string>
    <string name="kinetic_quality_icon">Quality</string>
    <string name="kinetic_danmaku_toggle">Danmaku</string>
    <string name="kinetic_subtitle_toggle">Subtitle</string>
    <string name="kinetic_danmaku_send">发送</string>
    <string name="kinetic_danmaku_hint">发个弹幕呗~</string>
    <string name="kinetic_settings_title">设置</string>
    <string name="kinetic_settings_mirror">镜像画面</string>
    <string name="kinetic_settings_loop">单集循环</string>
    <string name="kinetic_settings_auto_play">自动开播</string>
    <string name="kinetic_settings_more">更多播放设置 ›</string>
    <string name="kinetic_settings_more_back">‹ 返回</string>
    <string name="kinetic_settings_on">开</string>
    <string name="kinetic_settings_off">关</string>
    <string name="kinetic_settings_playback_mode">播放方式</string>
    <string name="kinetic_settings_mode_pause">播完暂停</string>
    <string name="kinetic_settings_mode_next">播完切下一集</string>
    <string name="kinetic_settings_aspect">视频比例</string>
    <string name="kinetic_settings_aspect_auto">自动</string>
    <string name="kinetic_settings_aspect_16_9">16:9</string>
    <string name="kinetic_settings_aspect_4_3">4:3</string>
    <string name="kinetic_settings_other">其它设置</string>
    <string name="kinetic_settings_hide_black_bars">隐藏黑边</string>
    <string name="kinetic_settings_blackout">关灯模式</string>
    <string name="kinetic_settings_screenshot">截图</string>
    <string name="kinetic_settings_gif">录制 GIF</string>
    <string name="kinetic_settings_gif_stop">停止录制</string>
    <string name="kinetic_screenshot_saved">截图已保存</string>
    <string name="kinetic_screenshot_failed">截图失败</string>
    <string name="kinetic_gif_saved">GIF 已保存</string>
    <string name="kinetic_gif_failed">GIF 保存失败</string>
    <string name="kinetic_audio_tracks">音轨</string>
    <string name="kinetic_no_audio_tracks">暂无可用音轨</string>
    <string name="kinetic_rate_title">倍速</string>
    <string name="kinetic_quality_title">清晰度</string>
    <string name="kinetic_quality_auto">自动</string>
    <string name="kinetic_ad_skip">跳过广告</string>
    <string name="kinetic_ad_countdown">广告 %1$ds</string>
</resources>
